    * Removed min_file_for_bar argument in favor of class attribute of
      _min_files_for_bar (see #106).
    * Add support for circular searches on EventBank (see #110)
  - obsplus.interfaces
    * Added ProgressBar for defining classes compatible with how obsplus
      uses progress bar, modeled after the ProgressBar class from the
      progressbar2 library (see #106).

obsplus 0.0.2:
  - obsplus.bank
    * Speed up wavebank.get_waveforms_bulk by time-filtering index before
      determining which files to read (see #93).
    * Update time is now set before reading files to update index (#95).
    * add try/except in read index to alleviate test failures with concurrent
      updates (see #101).
  - obsplus.conversions
    * Added a preserve_units flag to project and ensured forward compatibility
      with pyproj 2.x.x.
  - obsplus.DataFrameExtractor
    * Fixed a bug where objects with None attributes were being represented with
      'None' rather than '' when converted to str (see #99).
  - obsplus.datasets.crandall
    * Deleted EventDescriptions whose text was set to 'None' (see #99).
      NOTE: This change requires re-downloading the dataset to properly take
      effect!
  - obsplus.datasets.dataset
    * Renamed from obsplus.datasets.dataloader (#100)
    * Added a version numbering scheme to DataSet to enforce that the version of
      a downloaded dataset matches what is required by the DataSet (#100).
    * Changed where the datasets are stored. By default they will be stored in
      a directory called obspdata in the users home, but this can be changed
      using an environmental variable (#100).
    * Removed Dataset.Path attribute and added Dataset.download_path and
      dataset.source_path since the two are now different (#100).
    * Added a dataset_data_path.txt file which will remember where data have
      been downloaded so datasets can live in multiple places (#100).
  - obsplus.waveforms